<resources>
    <string name="app_name">DreamCatcher</string>
    <string name="dream_title_hint">Enter a title for the dream.</string>
    <string name="dream_title_label">Title</string>
    <string name="dream_entries_label">Entries</string>
    <string name="dream_fulfilled_label">Fulfilled</string>
    <string name="dream_deferred_label">Deferred</string>
    <string name="dream_item_title">dream Title</string>
    <string name="dream_item_date">dream Date</string>
    <string name="add_reflection_button">Add Reflection</string>
    <string name="reflection_hint">Enter the new reflection</string>
    <string name="dream_image">Dream Image</string>
    <string name="share_dream">Share Dream</string>
    <string name="take_dream_photo">Take Dream Photo</string>
    <string name="dream_image_text">Choose Dream Image</string>
    <string name="dream_report_text">Share Dream Report</string>
    <string name="dream_report">&gt;&gt; %1$s &lt;&lt;\nThis dream was conceived on %2$s.\n%3$s%4$s</string>
    <string name="dream_report_fulfilled">The dream has been fulfilled.</string>
    <string name="dream_report_deferred">The dream has been deferred.</string>
    <string name="dream_report_no_reflection">There are no reflections.\n</string>
    <string name="dream_report_subject">DreamCatcher Dream Report</string>
    <string name="share_report">Share dream report via</string>
</resources>